--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "docpad-plugin-vash",
     "version": "2.0.0",
-    "description": "DocPad plugin that renders vash templates to html",
+    "description": "DocPad plugin that renders vash (Razor syntax) templates",
     "homepage": "https://github.com/harmony7/docpad-plugin-vash",
     "license": {
         "type": "MIT"
